<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/base_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="50dp"
                android:text="@string/app_name"
                android:textSize="18pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="@string/registerText"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/register_full_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/name_icon"
                android:hint="@string/fullName" />

            <EditText
                android:id="@+id/register_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/phone_icon"
                android:hint="@string/phoneNumberLabel" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/email_icon"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/password_icon"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="@color/colorTextDark" />

        </LinearLayout>
    </RelativeLayout>
</layout>