<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/base_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="18pt"
                android:layout_gravity="start"
                android:layout_marginTop="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText"
                android:textSize="8pt"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                android:drawableLeft="@drawable/email_icon"
                android:background="@drawable/rounded_edit_text"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableLeft="@drawable/password_icon"
                android:background="@drawable/rounded_edit_text"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorTextDark"
                android:text="@string/login"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="20dp" >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/orText"
                    android:background="@color/colorTextDark" />

                <TextView
                    android:id="@+id/orText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="OR"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/colorTextDark" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/orText"
                    android:background="@color/colorTextDark" />
            </RelativeLayout>

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:textColor="?attr/colorTextDark"
                android:text="@string/create"
                />

        </LinearLayout>
    </RelativeLayout>
</layout>