<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="user"
            type="com.akiraagusta.android_todo.model.Profile" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/base_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/base_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/oldPass"
                android:textSize="5pt"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_old_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:hint="@string/oldPass"
                android:drawableStart="@drawable/password_icon"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edit_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/newPass"
                android:textSize="5pt"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:hint="@string/newPass"
                android:drawableStart="@drawable/password_icon"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edit_text"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorTextDark"
                android:text="@string/save"/>
        </LinearLayout>
    </RelativeLayout>
</layout>