<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.akiraagusta.android_todo.model.Profile" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileLabel"
            android:textSize="10pt"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/layout_drawable"
                android:padding="32dp"
                android:layout_marginTop="50dp">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:textSize="5pt"
                        android:gravity="start"
                        android:layout_marginStart="10dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_gravity="center_horizontal"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="5dp"
                        android:id="@+id/profile">

                        <LinearLayout
                            android:id="@+id/profile_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:paddingLeft="25dp"
                            android:paddingRight="25dp">

                            <TextView
                                android:id="@+id/profile_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/name_icon"
                                android:text="@{user.full_name}"
                                android:textColor="@color/colorTextDark"
                                android:textSize="12pt"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/phone_number_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/phoneNumberLabel"
                                android:textSize="5pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{user.phone_number}"
                                android:textSize="8pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/email_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/emailLabel"
                                android:textSize="5pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{user.email}"
                                android:textSize="8pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/gender_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/genderLabel"
                                android:textSize="5pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textSize="8pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/birth_date_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/birthDateLabel"
                                android:textSize="5pt"
                                android:textColor="@color/colorTextDark" />

                            <TextView
                                android:id="@+id/birth_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textSize="8pt"
                                android:textColor="@color/colorTextDark" />

                            <Button
                                android:id="@+id/upload_profile_button"
                                android:layout_width="150dp"
                                android:layout_height="35dp"
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center"
                                android:background="@drawable/rounded_button"
                                android:text="@string/profpic"
                                android:layout_marginBottom="20dp"
                                android:textColor="?attr/colorTextDark" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                     <ScrollView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="280dp"
                        android:layout_height="200dp"
                        android:layout_margin="12dp"
                        android:layout_gravity="center_horizontal"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="5dp" />
                </ScrollView>
                    <Button
                        android:id="@+id/sign_out_button"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:text="Sign Out"
                        android:layout_marginBottom="50dp"
                        android:textColor="?attr/colorTextDark" />
                </LinearLayout>
                </ScrollView>
            </LinearLayout>
    </RelativeLayout>
</layout>